src/styles/style.css
/*Global*/
* {
    margin: 0;
    padding: 0;
}

:root {
    --main-bg-color: #fdba74;
    --secondary-bg-color: #fed7aa;
    --main-text-border-color: #431407;
}

body {
    background-color: var(--main-bg-color);
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    color: var(--main-text-border-color);
}

#main-content {
    align-items: center;
    display: flex;
    justify-content: center;
    height: 90vh;
}

/*Home*/
#home-content {
    align-items: center;
    background-color: var(--secondary-bg-color);
    border: 2px solid var(--main-text-border-color);
    border-radius: 50px;
    display: flex;
    flex-direction: column;
    font-size: 20px;
    justify-content: center;
    padding: 25px;
}

#home-content h1 {
    font-size: 40px;
    padding: 20px;
}

#home-content p {
    text-align: center;
    width: 50%;
}

.about-burger {
    border-radius: 50px;
    padding: 30px;
    width: 400px;
}

/*Menu*/
.menu-item-container {
    display: grid;
    gap: 20px;
    grid-template-columns: repeat(2, 1fr); 
    justify-items: center;
    padding: 50px;
    width: 100%;
}

.menu-item {
    background-color: var(--secondary-bg-color);
    border: 5px solid var(--main-text-border-color);
    border-radius: 25px;
    padding: 30px;
    width: 70%;
}

.menu-item:hover {
    cursor: pointer;
}

.menu-item:hover > .item-img {
    opacity: 1;
}

.item-name {
    font-size: 32px;
    margin: 10px;
}

.item-img {
    border: 2px solid #fff7ed;
    border-radius: 25px;
    opacity: 0.8;
    width: 100%;
}

/* Contact */

#contact-content {
    background-color: var(--secondary-bg-color);
    border: 2px solid var(--main-text-border-color);
    padding: 25px;
}

#contact-content h1 {
    margin-bottom: 15px;
}

